--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "helmet": "^6.1.5",
     "mongoose": "^7.3.2",
-    "helmet": "^6.1.5"
+    "validator": "^13.9.0",
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "joi": "^17.7.0",
+    "celebrate": "^15.0.1"
   },
   "devDependencies": {
     "eslint": "^8.44.0",
